Images and text updated in ideation page, some small bug fixes and changes in other pages (like about page)

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>CMU Liquidnet</title>
+  <title>CMU Liquidnet - About Us</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
@@ -51,9 +51,9 @@
       <div class="h3">Emily Gong</div>
       <div class="b3 label grey-text">CLIENT LEAD</div>
       <div class="person-links">
-        <a href="#"><img src="images/about-icon1.png" class="person-link"></a>
+        <a href="https://www.linkedin.com/in/emilyfgong/"><img src="images/about-icon1.png" class="person-link"></a>
         <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-        <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
+        <a href="mailto:emily.f.gong@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
       </div>
     </div>
     <div class="quote-bubble">
@@ -90,9 +90,9 @@
       <div class="h3">June Liu</div>
       <div class="b3 label grey-text">QUANT RESEARCH LEAD</div>
       <div class="person-links">
-        <a href="#"><img src="images/about-icon1.png" class="person-link"></a>
+        <a href="https://www.linkedin.com/in/june-ycliu/"><img src="images/about-icon1.png" class="person-link"></a>
         <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-        <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
+        <a href="mailto:yunchun.june@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
       </div>
     </div>
     <img src="images/about/june.png" class="flexblock-headshot image right"/>
@@ -105,21 +105,21 @@
       <div class="h3">Yingli Sieh</div>
       <div class="b3 label grey-text">QUAL RESEARCH LEAD</div>
       <div class="person-links">
-        <a href="#"><img src="images/about-icon1.png" class="person-link"></a>
+        <a href="https://www.linkedin.com/in/yinglisieh/"><img src="images/about-icon1.png" class="person-link"></a>
         <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-        <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
+        <a href="mailto:yingli.sieh@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
       </div>
     </div>
     <div class="quote-bubble">
-      <div class="b2 purple-text big-quote">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+      <div class="b2 purple-text big-quote">I focused on developing project-wide and sprint-specific research plans, organizing user testing, and leading testing synthesis into usable insights for design.</div>
       <div class="flex-h">
         <div class="">
           <div class="b3 label light-purple-text">ABOUT ME</div>
-          <div class="b3">As an Accelerated MHCI student, I value the opportunity to apply my academic skills to a real-life project.</div>
+          <div class="b3">My experience in Cognitive Science guides my interest in evaluating digital products and services through studying user behavior.</div>
         </div>
         <div class="small-purple-section">
           <div class="b3 label light-purple-text">ALERT EGO</div>
-          <div class="b3">Donec sed odio dui. Donec sed odio dui.</div>
+          <div class="b3">Full-Time Animal Crossing Happy Home Designer</div>
         </div>
       </div>
     </div>
@@ -128,15 +128,15 @@
   <!-- Qian's information -->
   <div class="smaller-section container flex-h">
     <div class="quote-bubble">
-      <div class="b2 purple-text big-quote">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+      <div class="b2 purple-text big-quote">I led the development of our final deliverable website. On top of that, I did double-duty as a prototype designer and researcher on our team.</div>
       <div class="flex-h">
         <div class="">
           <div class="b3 label light-purple-text">ABOUT ME</div>
-          <div class="b3">My background in psychology and neuroscience began my leap into UX research related work. </div>
+          <div class="b3">I entered the field of design with a background in computer science - now I have mastery over technology to solve the right problems.</div>
         </div>
         <div class="small-purple-section">
           <div class="b3 label light-purple-text">ALERT EGO</div>
-          <div class="b3">Donec sed odio dui. Donec sed odio dui.</div>
+          <div class="b3">Geek Girl and Theatre + Movie Enthusiast</div>
         </div>
       </div>
     </div>
@@ -144,9 +144,9 @@
       <div class="h3">Qian Wang</div>
       <div class="b3 label grey-text">DEV LEAD</div>
       <div class="person-links">
-        <a href="#"><img src="images/about-icon1.png" class="person-link"></a>
+        <a href="https://www.linkedin.com/in/qian-wang-11513314a/"><img src="images/about-icon1.png" class="person-link"></a>
         <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-        <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
+        <a href="mailto:wangqian.evelyn@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
       </div>
     </div>
     <img src="images/about/qian.png" class="flexblock-headshot image right"/>
@@ -159,13 +159,13 @@
       <div class="h3">Nina Yang</div>
       <div class="b3 label grey-text">DESIGN LEAD</div>
       <div class="person-links">
-        <a href="#"><img src="images/about-icon1.png" class="person-link"></a>
+        <a href="https://www.linkedin.com/in/ninaqyang/"><img src="images/about-icon1.png" class="person-link"></a>
         <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
         <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
       </div>
     </div>
     <div class="quote-bubble">
-      <div class="b2 purple-text big-quote">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+      <div class="b2 purple-text big-quote">I led the design process and worked alongside user research and testing, while learning about business strategy and frameworks.</div>
       <div class="flex-h">
         <div class="">
           <div class="b3 label light-purple-text">ABOUT ME</div>
@@ -173,7 +173,7 @@
         </div>
         <div class="small-purple-section">
           <div class="b3 label light-purple-text">ALERT EGO</div>
-          <div class="b3">Donec sed odio dui. Donec sed odio dui.</div>
+          <div class="b3">Cat Lady and Gourmet Bubble Tea Drinker</div>
         </div>
       </div>
     </div>
