--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -88,26 +88,26 @@
             <div class="flex-h even-wrapper full desktop">
                 <div class="flex-h">
                     <div class="space"></div>
-                    <div class="arrow-text h3 text-center purple-text">Research Through Design</div>
+                    <div class="arrow-text h3 text-center">Design Research</div>
                     <div class="space hline"></div>
                 </div>
                 <div class="flex-h">
                     <div class="space hline"></div>
-                    <div class="arrow-text h3 text-center purple-text">User Testing</div>
+                    <div class="arrow-text h3 text-center">User Testing</div>
                     <div class="space hline"></div>
                 </div>
                 <div class="flex-h">
                     <div class="space hline"></div>
-                    <div class="arrow-text h3 text-center purple-text">Final Product</div>
+                    <div class="arrow-text h3 text-center">Final Product</div>
                     <div class="space"></div>
                 </div>
             </div>
             <div class="flex-h even-wrapper full tablet-phone-v">
-                <div class="arrow-text h3 text-center tablet-phone purple-text">Research Through Design</div>
+                <div class="arrow-text h3 text-center tablet-phone">Design Research</div>
                 <div class="text-box">To make our work suitable for testing at Liquidnet, we started with hi-fi designs and did research through user testing.</div>
-                <div class="arrow-text h3 text-center tablet-phon purple-text">User Testing</div>
+                <div class="arrow-text h3 text-center tablet-phone">User Testing</div>
                 <div class="text-box">Our team used onsite interviews and remote calls for testing. We talked to proxy traders and relationship managers.</div>
-                <div class="arrow-text h3 text-center tablet-phon purple-text">Final Product</div>
+                <div class="arrow-text h3 text-center tablet-phone">Final Product</div>
                 <div class="text-box">New analogous domain research and feedback from user testing gave us direction for our final product.</div>
             </div>
         </div>
@@ -288,7 +288,7 @@
 		    <div class="slideshow-item">
 		      <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 2)">
 		      <div>
-		        <h2>Space-saving Bubble</h2>
+		        <h2>Space-Saving Bubble</h2>
 		        <b2>This design was an unconventional, futuristic take. We wanted to challenge the current visual standard. We tested call-to-action through bubble alerts.</b2>
 		        <img class="slideshow-img" src="images/research/slideshow-pic3.png">
 		        <div class="dots-wrapper">
@@ -313,7 +313,7 @@
         <div class="smaller-section">We tested hi-fi prototypes onsite and learned which concepts and features had the most value for traders. A handful of the synthesized notes are here - they led our final revisions of the prototype. .</div>
 <!--        item-->
         <div class="smaller-section container flex-h">
-            <img src="images/design/attention-alert.png" class="flexblock-headshot image left"/>
+            <img src="images/design/color-animation.gif" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-white">
                 <div class="card-title">Attention</div>
                 <div class="flex-h">
@@ -322,7 +322,7 @@
             </div>
         </div>
         <div class="smaller-section container flex-h">
-            <img src="images/design/ambient-analytics-square.jpg" class="flexblock-headshot image left"/>
+            <img src="images/design/wriggle.gif" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-white">
                 <div class="card-title">Animation</div>
                 <div class="flex-h">
@@ -332,7 +332,7 @@
         </div>
         <div class="smaller-section container flex-h">
 
-            <img src="images/design/minimized.png" class="flexblock-headshot image left"/>
+            <img src="images/Alert.png" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-white">
                 <div class="card-title">Features to Keep</div>
                 <div class="flex-h">
@@ -351,7 +351,7 @@
                     <button class="tab-navbutton blue"  onclick="changeTab(this, 1)"><b2>Observations</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/design/elito-method.jpg">
+                    <img class="tab-cover-image" src="images/design/directed-storytelling.jpg">
                     <div class="tab-content">
                         <div>
                             <div class="h3">What We Did</div>
@@ -450,7 +450,7 @@
                 </div>
 
                 <div class="tab-page blue">
-                    <img class="tab-cover-image" src="images/design/clustering.jpg">
+                    <img class="tab-cover-image" src="images/design/clustering-slide.jpg">
                     <div class="tab-content">
                         <div>
                             <div class="h3">What We Did</div>
@@ -553,13 +553,35 @@
         <div class="section">
             <div class="container carousel">
                 <div class="tab-navbar blue">
-                    <button class="tab-navbutton active blue" onclick="changeTab(this, 0)"><b2>Interview Feedback</b2></button>
+                    <button class="tab-navbutton active blue" onclick="changeTab(this, 0)"><b2>User Testing</b2></button>
+                    <button class="tab-navbutton blue" onclick="changeTab(this, 1)"><b2>Analogous Domains</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/research/tab-pic2.png">
+                    <img class="tab-cover-image" src="images/design/usertesting.png">
                     <div class="tab-content">
                         <div>
                             <div class="h3">Workflow overload</div>
+                            <ul class="tab-bullet blue">
+                                <li>Traders typically master a workflow and stick to it</li>
+                                <li>Connected workflows are not highlighted visually</li>
+                                <li>Thus, traders are reluctant to learn new workflows</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <div class="h3">Finding features</div>
+                            <ul class="tab-bullet blue">
+                                <li>Due to of visual clutter, new features are hard to find</li>
+                                <li>No in-app help means traders must call sales for help</li>
+                                <li>'Hidden features' in blotter are unused and unseen</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-page">
+                    <img class="tab-cover-image" src="images/design/analogous-testing.jpg">
+                    <div class="tab-content">
+                        <div>
+                            <div class="h3">New workflow overload</div>
                             <ul class="tab-bullet blue">
                                 <li>Traders typically master a workflow and stick to it</li>
                                 <li>Connected workflows are not highlighted visually</li>
@@ -608,7 +630,7 @@
             </div>
         </div>
         <div class="smaller-section container flex-h">
-            <img src="images/about/nina.png" class="flexblock-headshot image left"/>
+            <img src="images/design/usability.jpg" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-light-purple">
                 <div class="card-title">Usability</div>
                 <div class="flex-h">
@@ -708,7 +730,8 @@
     </div>
     <div class="section container center">
         <div class="h2">Previous step in our journey:</div>
-        <img class="b1 img-button" src="images/buttons/button-ideation.svg" alt="Trufflin Logo">
+        <a href="ideation.html">
+          <img class="b1 img-button" src="images/buttons/button-ideation.svg" alt="Trufflin Logo"></a>
     </div>
 </div>
 
