--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -461,7 +461,7 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/fi-trader-sequence-model.jpg">
+                    <img class="tab-cover-image" src="images/Passive-Match-Flow-p-1080.jpeg">
                     <div class="tab-content">
                         <div>
                             <div class="h3">Product and features</div>
@@ -516,7 +516,7 @@
                     <button class="tab-navbutton"  onclick="changeTab(this, 2)"><b2>Emotions and Stress</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/research/tab-pic2.png">
+                    <img class="tab-cover-image" src="images/research/product-usability-2.jpg">
                     <div class="tab-content">
                         <div>
                             <div class="h3">Workflow overload</div>
@@ -537,7 +537,7 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/tab-pic1.png">
+                    <img class="tab-cover-image" src="images/research/usability-2.jpg">
                     <div class="tab-content">
                         <div>
                             <div class="h3">Juggling workflows</div>
@@ -558,7 +558,7 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/tab-pic2.png">
+                    <img class="tab-cover-image" src="images/research/trading_floor-2.jpg">
                     <div class="tab-content">
                         <div>
                             <div class="h3">Information overload</div>
@@ -591,7 +591,7 @@
         <div class="smaller-section">After user and product research, we understood where Liquidnet stood with its users. The trader's needs that were not met and the usability issues in Liquidnet 5 showed our client where they could improve.</div>
         <!--        item-->
         <div class="smaller-section container flex-h">
-            <img src="images/about/nina.png" class="flexblock-headshot image left"/>
+            <img src="images/research/workflow-square.jpg" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-light-purple">
                 <div class="card-title">Different workflows</div>
                 <div class="flex-h">
@@ -600,7 +600,7 @@
             </div>
         </div>
         <div class="smaller-section container flex-h">
-            <img src="images/about/nina.png" class="flexblock-headshot image left"/>
+            <img src="images/research/otas.png" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-light-purple">
                 <div class="card-title">Analytics</div>
                 <div class="flex-h">
@@ -609,7 +609,7 @@
             </div>
         </div>
         <div class="smaller-section container flex-h">
-            <img src="images/about/nina.png" class="flexblock-headshot image left"/>
+            <img src="images/research/trader.jpg" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-light-purple">
                 <div class="card-title">Usability</div>
                 <div class="flex-h">
@@ -624,32 +624,11 @@
         <div class="section">
             <div class="carousel">
                 <div class="tab-navbar">
-                    <button class="tab-navbutton active" onclick="changeTab(this, 0)"><b2>In-House Feedback</b2></button>
-                    <button class="tab-navbutton"  onclick="changeTab(this, 1)"><b2>Service Blueprint</b2></button>
+                    <button class="tab-navbutton active" onclick="changeTab(this, 0)"><b2>Service Blueprint</b2></button>
+                    <button class="tab-navbutton"  onclick="changeTab(this, 1)"><b2>Client Feedback</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/research/tab-pic2.png">
-                    <div class="tab-content">
-                        <div>
-                            <div class="h3">Workflow overload</div>
-                            <ul class="tab-bullet">
-                                <li>Traders typically master a workflow and stick to it</li>
-                                <li>Connected workflows are not highlighted visually</li>
-                                <li>Thus, traders are reluctant to learn new workflows</li>
-                            </ul>
-                        </div>
-                        <div>
-                            <div class="h3">Finding features</div>
-                            <ul class="tab-bullet">
-                                <li>Due to of visual clutter, new features are hard to find</li>
-                                <li>No in-app help means traders must call sales for help</li>
-                                <li>'Hidden features' in blotter are unused and unseen</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/tab-pic1.png">
+                    <img class="tab-cover-image" src="images/service-blueprint.png">
                     <div class="tab-content">
                         <div>
                             <div class="h3">Overall Trends</div>
@@ -669,6 +648,27 @@
                         </div>
                     </div>
                 </div>
+                <div class="tab-page">
+                    <img class="tab-cover-image" src="images/research/feedback-2.jpg">
+                    <div class="tab-content"><div>
+                        <div class="h3">Workflow overload</div>
+                            <ul class="tab-bullet">
+                                <li>Traders typically master a workflow and stick to it</li>
+                                <li>Connected workflows are not highlighted visually</li>
+                                <li>Thus, traders are reluctant to learn new workflows</li>
+                            </ul>
+                        </div>
+                        <div>
+                        <div class="h3">Finding features</div>
+                            <ul class="tab-bullet">
+                                <li>Due to of visual clutter, new features are hard to find</li>
+                                <li>No in-app help means traders must call sales for help</li>
+                                <li>'Hidden features' in blotter are unused and unseen</li>
+                            </ul>
+                        </div>
+                        
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -680,11 +680,11 @@
                 <div class="tab-navbar">
                     <button class="tab-navbutton active" onclick="changeTab(this, 0)"><b2>Walking the Wall</b2></button>
                     <button class="tab-navbutton"  onclick="changeTab(this, 1)"><b2>20 Questions</b2></button>
-                    <button class="tab-navbutton"  onclick="changeTab(this, 1)"><b2>Reverse Assumptions</b2></button>
-                    <button class="tab-navbutton"  onclick="changeTab(this, 1)"><b2>Value Proposition</b2></button>
+                    <button class="tab-navbutton"  onclick="changeTab(this, 2)"><b2>Reverse Assumptions</b2></button>
+                    <button class="tab-navbutton"  onclick="changeTab(this, 3)"><b2>Value Proposition</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/research/tab-pic2.png">
+                    <img class="tab-cover-image" src="images/walking-the-wall.JPG">
                     <div class="tab-content">
                         <div>
                             <div class="h3">What we did</div>
@@ -701,7 +701,7 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/tab-pic1.png">
+                    <img class="tab-cover-image" src="images/20q.jpg">
                     <div class="tab-content">
                         <div>
                             <div class="h3">What we did</div>
@@ -719,7 +719,7 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/tab-pic1.png">
+                    <img class="tab-cover-image" src="images/reverse.JPG">
                     <div class="tab-content">
                         <div>
                             <div class="h3">What we did</div>
@@ -736,7 +736,7 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/tab-pic1.png">
+                    <img class="tab-cover-image" src="images/prop.png">
                     <div class="tab-content">
                         <div>
                             <div class="h3">What we did</div>
@@ -785,7 +785,8 @@
     </div>
     <div class="section container center">
         <div class="h2">Next step in our journey:</div>
-        <img class="b1 img-button" src="images/buttons/button-ideation.svg" alt="Trufflin Logo">
+        <a href="ideation s.html">
+          <img class="b1 img-button" src="images/buttons/button-ideation.svg" alt="Trufflin Logo"></a>
     </div>
 </div>
 
