--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -235,7 +235,7 @@
         <div>After doing analogous case study work, our team focused on making four higher quality prototypes. Similar case studies were grouped together to make one testable concept for our onsite research.</div>
         <!-- Carousal 2 -->
         <div class="section">
-		  <div class="container bg-light-blue slideshow-wrapper">
+		  <div class="bg-light-blue slideshow-wrapper">
 		    <div class="slideshow-item active">
 		      <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 2)">
 		      <div>
@@ -345,7 +345,7 @@
         <div>This section details the interview methodology used to test our prototypes, as well as some overall observations from the Liquidnet Labs event and other activities.</div>
         <!-- Carousal 1 -->
         <div class="section">
-            <div class="container carousel">
+            <div class="carousel">
                 <div class="tab-navbar blue">
                     <button class="tab-navbutton active blue" onclick="changeTab(this, 0)"><b2>Directed Storytelling</b2></button>
                     <button class="tab-navbutton blue"  onclick="changeTab(this, 1)"><b2>Observations</b2></button>
@@ -399,7 +399,7 @@
         <div>Interviews and other design activities done onsite were collected into a three-page Feedback Grid, whereas specific questions about desirability were sorted into a Kano Analysis chart.</div>
         <!-- Carousal 1 -->
         <div class="section">
-            <div class="container carousel">
+            <div class="carousel">
                 <div class="tab-navbar blue">
                     <button class="tab-navbutton active blue" onclick="changeTab(this, 0)"><b2>Feedback Grid</b2></button>
                     <button class="tab-navbutton blue"  onclick="changeTab(this, 1)"><b2>Kano Analysis</b2></button>
@@ -478,7 +478,7 @@
         <div>After gathering a considerable amount of generative data on traders, our team synthesized findings by creating visualizations. These maps and graphs helped us communicate our research findings with ease.</div>
         <!-- Carousal 2 -->
         <div class="section">
-		  <div class="container bg-light-blue slideshow-wrapper">
+		  <div class="bg-light-blue slideshow-wrapper">
 		    <div class="slideshow-item active">
 		      <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 2)">
 		      <div>
@@ -551,7 +551,7 @@
         <div>Many traders already feel overwhelmed by their job, and their software doesn't help. Traders have cognitive and emotional overload from feature fear and difficult UI experiences.</div>
         <!-- Carousal 1 -->
         <div class="section">
-            <div class="container carousel">
+            <div class="carousel">
                 <div class="tab-navbar blue">
                     <button class="tab-navbutton active blue" onclick="changeTab(this, 0)"><b2>User Testing</b2></button>
                     <button class="tab-navbutton blue" onclick="changeTab(this, 1)"><b2>Analogous Domains</b2></button>
@@ -644,7 +644,7 @@
         <div>To collect our user and product related findings in one location, we developed a service blueprint. Each swimlane designated a different user-type, all of which use Liquidnet through unique workflows.</div>
         <!-- Carousal 1 -->
         <div class="section">
-		  <div class="container bg-light-blue slideshow-wrapper">
+		  <div class="bg-light-blue slideshow-wrapper">
 		    <div class="slideshow-item active">
 		      <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 2)">
 		      <div>
@@ -709,9 +709,8 @@
         <div class="smaller-section">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div>
         <!--card-->
         <div class="section">
-            <div class="container">
+            <div class="">
                 <div class="card card-style1">
-
                     <img src="images/design/progress-icon.svg" alt="" class="card-icon">
                     <div class="ipad-bin">
                         <img src="images/design/progress-icon.svg" alt="" class="card-icon-ipad">
