--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
@@ -120,7 +120,7 @@
         <div class="smaller-section">With contextual research and 'How Might We' questions to guide us, our team moved into ideation. We used Crazy Eights to draw out any and all ideas. We then drew the most compelling ideas in storyboarding.</div>
         <!-- Carousal 2 -->
         <div class="section">
-            <div class="container bg-light-blue slideshow-wrapper">
+            <div class="bg-light-blue slideshow-wrapper">
                 <div class="slideshow-item active">
                     <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 2)">
                     <div>
@@ -270,7 +270,7 @@
         <div>Our storyboards summarized our overall ideas from the Crazy Eights activity. This section will go over a few of the storyboards we made.</div>
         <!-- Carousal 2 -->
         <div class="section">
-            <div class="container bg-light-blue slideshow-wrapper">
+            <div class="bg-light-blue slideshow-wrapper">
                 <div class="slideshow-item active">
                     <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 2)">
                     <div>
@@ -454,7 +454,7 @@ to assist traders in improving their performance.</li>
         <div class="smaller-section">Moving forward, we had feedback on which concepts might be most valuable and made some low, mid, and high-fi prototypes of those. We were then able to show them during our spring semester presentation. </div>
         <!-- Carousal 2 -->
         <div class="section">
-            <div class="container bg-light-blue slideshow-wrapper">
+            <div class="bg-light-blue slideshow-wrapper">
                 <div class="slideshow-item active">
                     <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 2)">
                     <div>
@@ -526,7 +526,7 @@ to assist traders in improving their performance.</li>
         <div>We started with low-fi prototypes and tested with some proxy users. After reflecting on the feedback, we iterated and developed secondary low-fi work and a first round of mid-fi work.</div>
         <!-- Carousal 2 -->
         <div class="section">
-            <div class="container bg-light-blue slideshow-wrapper">
+            <div class="bg-light-blue slideshow-wrapper">
                 <div class="slideshow-item active">
                     <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 2)">
                     <div>
@@ -718,16 +718,15 @@ to assist traders in improving their performance.</li>
             </div>
         </div>
     </div>
-    <div class="section container center">
-        <div class="h2">Previous step in our journey:</div>
-        <a href="research.html">
-          <img class="b1 img-button" src="images/buttons/button-research.svg" alt="Trufflin Logo"></a>
-        <div class="h2">Next step in our journey:</div>
-        <a href="design.html">
-          <img class="b1 img-button" src="images/buttons/button-design.svg" alt="Trufflin Logo"></a>
-    </div>
-    <div class="section container right">
-        
+    <div class="section container center flex-h">
+        <div>
+            <div class="h2">Previous step in our journey:</div>
+            <a href="research.html"><img class="b1 img-button" src="images/buttons/button-research.svg" alt="Trufflin Logo"></a>
+        </div>
+        <div class="align-right">
+            <div class="h2">Next step in our journey:</div>
+            <a href="design.html"><img class="b1 img-button" src="images/buttons/button-design.svg" alt="Trufflin Logo"></a>
+        </div>
     </div>
 </div>
 
