--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -785,7 +785,7 @@
     </div>
     <div class="section container center">
         <div class="h2">Next step in our journey:</div>
-        <a href="ideation s.html">
+        <a href="ideation.html">
           <img class="b1 img-button" src="images/buttons/button-ideation.svg" alt="Trufflin Logo"></a>
     </div>
 </div>
