fix responsiveness of about page

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -45,15 +45,17 @@
   </div>
 
   <!-- Emily's information -->
-  <div class="container flex-h smaller-section">
-    <img src="images/about/emily.png" class="flexblock-headshot image left"/>
-    <div class="about-intro-header">
-      <div class="h3">Emily Gong</div>
-      <div class="b3 label grey-text">CLIENT LEAD</div>
-      <div class="person-links">
-        <a href="https://www.linkedin.com/in/emilyfgong/"><img src="images/about-icon1.png" class="person-link"></a>
-        <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-        <a href="mailto:emily.f.gong@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+  <div class="container flex-h smaller-section tablet-phone-v">
+    <div class="flex-h teammate-intro">
+      <img src="images/about/emily.png" class="flexblock-headshot image left"/>
+      <div class="about-intro-header">
+        <div class="h3">Emily Gong</div>
+        <div class="b3 label grey-text">CLIENT LEAD</div>
+        <div class="person-links">
+          <a href="https://www.linkedin.com/in/emilyfgong/"><img src="images/about-icon1.png" class="person-link"></a>
+          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+          <a href="mailto:emily.f.gong@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+        </div>
       </div>
     </div>
     <div class="quote-bubble">
@@ -72,7 +74,19 @@
   </div>
 
   <!-- June's information -->
-  <div class="container flex-h smaller-section">
+  <div class="container flex-h smaller-section tablet-phone-v">
+    <div class="flex-h teammate-intro tablet-phone">
+      <img src="images/about/june.png" class="flexblock-headshot image left"/>
+      <div class="about-intro-header">
+        <div class="h3">June Liu</div>
+        <div class="b3 label grey-text">QUANT RESEARCH LEAD</div>
+        <div class="person-links">
+          <a href="https://www.linkedin.com/in/june-ycliu/"><img src="images/about-icon1.png" class="person-link"></a>
+          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+          <a href="mailto:yunchun.june@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+        </div>
+      </div>
+    </div>
     <div class="quote-bubble">
       <div class="b2 purple-text big-quote">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
       <div class="flex-h">
@@ -86,28 +100,32 @@
         </div>
       </div>
     </div>
-    <div class="about-intro-header right">
-      <div class="h3">June Liu</div>
-      <div class="b3 label grey-text">QUANT RESEARCH LEAD</div>
-      <div class="person-links">
-        <a href="https://www.linkedin.com/in/june-ycliu/"><img src="images/about-icon1.png" class="person-link"></a>
-        <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-        <a href="mailto:yunchun.june@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+    <div class="flex-h teammate-intro desktop">
+      <div class="about-intro-header right">
+        <div class="h3">June Liu</div>
+        <div class="b3 label grey-text">QUANT RESEARCH LEAD</div>
+        <div class="person-links">
+          <a href="https://www.linkedin.com/in/june-ycliu/"><img src="images/about-icon1.png" class="person-link"></a>
+          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+          <a href="mailto:yunchun.june@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+        </div>
       </div>
+      <img src="images/about/june.png" class="flexblock-headshot image right"/>
     </div>
-    <img src="images/about/june.png" class="flexblock-headshot image right"/>
   </div>
 
   <!-- Yingli's information -->
-  <div class="container flex-h smaller-section">
-    <img src="images/about/yingli.png" class="flexblock-headshot image left"/>
-    <div class="about-intro-header">
-      <div class="h3">Yingli Sieh</div>
-      <div class="b3 label grey-text">QUAL RESEARCH LEAD</div>
-      <div class="person-links">
-        <a href="https://www.linkedin.com/in/yinglisieh/"><img src="images/about-icon1.png" class="person-link"></a>
-        <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-        <a href="mailto:yingli.sieh@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+  <div class="container flex-h smaller-section tablet-phone-v">
+    <div class="flex-h teammate-intro">
+      <img src="images/about/yingli.png" class="flexblock-headshot image left"/>
+      <div class="about-intro-header">
+        <div class="h3">Yingli Sieh</div>
+        <div class="b3 label grey-text">QUAL RESEARCH LEAD</div>
+        <div class="person-links">
+          <a href="https://www.linkedin.com/in/yinglisieh/"><img src="images/about-icon1.png" class="person-link"></a>
+          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+          <a href="mailto:yingli.sieh@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+        </div>
       </div>
     </div>
     <div class="quote-bubble">
@@ -126,7 +144,19 @@
   </div>
 
   <!-- Qian's information -->
-  <div class="smaller-section container flex-h">
+  <div class="smaller-section container flex-h tablet-phone-v">
+    <div class="flex-h teammate-intro tablet-phone">
+      <img src="images/about/qian.png" class="flexblock-headshot image left"/>
+      <div class="about-intro-header">
+        <div class="h3">Qian Wang</div>
+        <div class="b3 label grey-text">DEV LEAD</div>
+        <div class="person-links">
+          <a href="https://www.linkedin.com/in/qian-wang-11513314a/"><img src="images/about-icon1.png" class="person-link"></a>
+          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+          <a href="mailto:wangqian.evelyn@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+        </div>
+      </div>
+    </div>
     <div class="quote-bubble">
       <div class="b2 purple-text big-quote">I led the development of our final deliverable website. On top of that, I did double-duty as a prototype designer and researcher on our team.</div>
       <div class="flex-h">
@@ -140,28 +170,32 @@
         </div>
       </div>
     </div>
-    <div class="about-intro-header right">
-      <div class="h3">Qian Wang</div>
-      <div class="b3 label grey-text">DEV LEAD</div>
-      <div class="person-links">
-        <a href="https://www.linkedin.com/in/qian-wang-11513314a/"><img src="images/about-icon1.png" class="person-link"></a>
-        <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-        <a href="mailto:wangqian.evelyn@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+    <div class="flex-h teammate-intro desktop">
+      <div class="about-intro-header right">
+        <div class="h3">Qian Wang</div>
+        <div class="b3 label grey-text">DEV LEAD</div>
+        <div class="person-links">
+          <a href="https://www.linkedin.com/in/qian-wang-11513314a/"><img src="images/about-icon1.png" class="person-link"></a>
+          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+          <a href="mailto:wangqian.evelyn@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+        </div>
       </div>
+      <img src="images/about/qian.png" class="flexblock-headshot image right"/>
     </div>
-    <img src="images/about/qian.png" class="flexblock-headshot image right"/>
   </div>
 
   <!-- Nina's information -->
-  <div class="smaller-section container flex-h">
-    <img src="images/about/nina.png" class="flexblock-headshot image left"/>
-    <div class="about-intro-header">
-      <div class="h3">Nina Yang</div>
-      <div class="b3 label grey-text">DESIGN LEAD</div>
-      <div class="person-links">
-        <a href="https://www.linkedin.com/in/ninaqyang/"><img src="images/about-icon1.png" class="person-link"></a>
-        <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-        <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
+  <div class="smaller-section container flex-h tablet-phone-v">
+    <div class="flex-h teammate-intro">
+      <img src="images/about/nina.png" class="flexblock-headshot image left"/>
+      <div class="about-intro-header">
+        <div class="h3">Nina Yang</div>
+        <div class="b3 label grey-text">DESIGN LEAD</div>
+        <div class="person-links">
+          <a href="https://www.linkedin.com/in/ninaqyang/"><img src="images/about-icon1.png" class="person-link"></a>
+          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+          <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
+        </div>
       </div>
     </div>
     <div class="quote-bubble">
