Add blog images and links, fixed team photo x2 bug

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -30,12 +30,12 @@
 </div>
 
 <div class="banner section">
+  <img src="images/about/banner-right.svg" class="bg right">
+  <img src="images/about/banner-left.svg" class="bg left">
   <div class="container">
     <div class="page-title green-text">About Us</div>
     <div class="banner-paragraph">Team Trufflin members are well-versed in studying human behavior be it from a variety of fields; our backgrounds include but are not limited to business, cognitive sciences, development, and design. Like the pig that digs for the ‘black gold’ of truffles, we are digging into the financial sphere and uprooting opportunities for Liquidnet as they delve into user research and design.</div>
   </div>
-  <img src="images/about/banner-right.svg" class="bg right">
-  <img src="images/about/banner-left.svg" class="bg left">
 </div>
 
 <div class="section">
@@ -59,15 +59,15 @@
       </div>
     </div>
     <div class="quote-bubble">
-      <div class="b2 purple-text big-quote">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+      <div class="b2 purple-text big-quote">I led project strategies around research, design, and development work and contributed to user research, ideation, and design.</div>
       <div class="flex-h">
         <div class="">
           <div class="b3 label light-purple-text">ABOUT ME</div>
-          <div class="b3">Experience in business intelligence and start-up culture brought me to HCI and user-centered design. </div>
+          <div class="b3">A major force behind my early career is trying out new ways to have impact using creative thinking and methods.</div>
         </div>
         <div class="small-purple-section">
           <div class="b3 label light-purple-text">ALERT EGO</div>
-          <div class="b3">Donec sed odio dui. Donec sed odio dui.</div>
+          <div class="b3">Personality Test Whiz</div>
         </div>
       </div>
     </div>
@@ -88,15 +88,15 @@
       </div>
     </div>
     <div class="quote-bubble">
-      <div class="b2 purple-text big-quote">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+      <div class="b2 purple-text big-quote">I planned and led secondary and primary user research to inform the design decisions of the projects.</div>
       <div class="flex-h">
         <div class="">
           <div class="b3 label light-purple-text">ABOUT ME</div>
-          <div class="b3">My background in psychology and neuroscience began my leap into UX research related work. </div>
+          <div class="b3">I'm a mix-method UX research with a growing interest and experience in human-AI interaction.</div>
         </div>
         <div class="small-purple-section">
           <div class="b3 label light-purple-text">ALERT EGO</div>
-          <div class="b3">Donec sed odio dui. Donec sed odio dui.</div>
+          <div class="b3">Boardgames Geek & Designated Doodler</div>
         </div>
       </div>
     </div>
@@ -220,22 +220,22 @@
     <div class="section-title-line green-bg"></div>
     <div class="flex-h gallery">
       <div class="blog">
-        <div class="blog-img"></div>
-        <div class="blog-descript-info">Blog Title 1</div>
+        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/sprint-3-finding-ways-to-understand-our-user"><img src="images/design/crazy-eights.jpg" class="blog-img"></a>
+        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/sprint-3-finding-ways-to-understand-our-user"><div class="blog-descript-info">Understanding our Users</div></a>
       </div>
       <div class="blog">
-        <div class="blog-img"></div>
-        <div class="blog-descript-info">Blog Title 1</div>
+        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/summer-sprint-1-diving-deeper-into-alerts"><img src="images/about/blog-2-pic.jpg" class="blog-img"></a>
+        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/summer-sprint-1-diving-deeper-into-alerts"><div class="blog-descript-info">Diving Deeper Into Alerts</div></a>
       </div>
       <div class="blog">
-        <div class="blog-img"></div>
-        <div class="blog-descript-info">Blog Title 1</div>
+        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/summer-sprint-1-diving-deeper-into-alerts"><img src="images/about/blog-3-pic.jpg" class="blog-img"></a>
+        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/summer-sprint-trip-testing-on-the-liquidnet-trip"><div class="blog-descript-info">Testing our Work in New York</div></a>
       </div>
     </div>
   </div>
   <div class="section container center">
     <div class="h2">Want to read more about our journey?</div>
-    <img class="b1 img-button" src="images/buttons/learn-more.svg" alt="Trufflin Logo">
+    <a href="https://sites.google.com/andrew.cmu.edu/trufflin/home"><img class="b1 img-button" src="images/buttons/learn-more.svg" alt="Trufflin Logo"></a>
   </div>
 </div>
 
